# sylithecode

./: .env.example  .gitignore  BHARATCODE.example.md  README.md  pyproject.toml
bharatcode/: __init__.py  agent.py  commands.py  config.py  coordinator.py  cost.py  diff.py  hooks.py  index.py  main.py  memory.py  permissions.py  project.py  session_storage.py  skills.py  subagent.py  tools.py  ui.py
