[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatcode"
version = "0.1.0"
description = "AI Coding Agent for Indian Developers — powered by DeepSeek"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "coding-agent", "deepseek", "india", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "questionary>=1.10",
]

[project.scripts]
bharatcode = "bharatcode.main:cli"

[project.urls]
Repository = "https://github.com/chhelurathore/bharatcode"

[tool.setuptools.packages.find]
where = ["."]
include = ["bharatcode*"]

[tool.setuptools.package-data]
bharatcode = ["py.typed"]
